fixing steps spacing

--- a/app/assets/stylesheets/how_it_works.css.scss
+++ b/app/assets/stylesheets/how_it_works.css.scss
@@ -1,4 +1,12 @@
+#steps{
+    width:100%;
+    height:510px;
+    padding-top:20px;
+}
+
+
 .how-goalnect-works-boxes {
+  padding: 20px 0 20px 0;
   div {
     display:block;
     z-index:1;
@@ -22,4 +30,5 @@
     }
   }
 }
+
 
