--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -115,7 +115,7 @@ h1{
 }
 
 #steps-fb-like {
-   margin: 35px 0 0 0;
+   margin: -20px 0 0 0;
    float:right;
 }
 
@@ -248,7 +248,18 @@ header{
     }
 }
 
-.explore_more_goals {
+.landing_explore_more {
+  text-align:center;
+  font-size:18px;
+  font-family:$bentonsansbold;
+  font-weight:bold;
+}
+                       
+#steps_more {
+  padding-top: 15px
+}
+
+.how_it_works_more {
   text-align:center;
   font-size:18px;
   font-family:$bentonsansbold;
@@ -305,11 +316,6 @@ header{
 	}
 }
 
-#steps{
-    width:100%;
-    height:432px;
-    padding-top:54px;
-}
 
 .cycle{
     li{
